trying to fix custom fonts not showing up

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -4,7 +4,7 @@
 @font-face 
 {
     font-family: comic_white_rabbit;
-    src: url("../Fonts/Comic_White_Rabbit_.otf");
+    src: url("../Fonts/Comic_White_Rabbit_.otf") format("truetype");
 }
 
 /* Use body as a default style for everything */
